add note about scaling twitter's appsec program

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ layout: default
 
   <p> After a fun interview, Twitter offered my a role on the security team. At the time, there was one team. Over time, my role moved to product security and then to application security.</p>
 
+  <p> When I joined the company, there was only one Scala endpoint and about 1,200 employees. I helped Twitter's application security program scale to not only the increasing adoption of scala, but also with the increasing number of engineers. Obviously, I did not form the entire program but I did contribute significantly to a program than handled the growth well. At the time I left, only a few Rails endpoints were left and the company had tripled in size. </p>
+
   <p> I became heavily involved in the Content Security Policy spec and lead the effort to deploy "security headers" across all Twitter properties. This included an open source library (<a href="https://github.com/twitter/secureheaders">secure_headers</a>) as well as providing guidance, augmenting the custom Twitter framework, and providing tools to help track progress.</p>
 
   <p> While I was part of the security team, I helped improve and integrate security static analysis into the deployment pipelines of every Rails project at Twitter with <a href="http://brakemanscanner.org/">Brakeman</a>. This went through many iterations with varying success, until we finally came up with SADB. SADB received high praise.</p>
