mention that brakeman pro 1.0 is out

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ layout: default
   <h3>Brakeman Security Inc.</h3>
   <h4>JRubyFX Engineer, co-founder</h4>
 
-  <p> <a href="https://brakemanpro.com">Brakeman Pro</a> as you may have guess is the enhanced version of the open source Brakeman with a native desktop application for managing scans and scan results. It's built using JRuby and JavaFX (JRubyFX). We are currently in our second beta.</p>
+  <p> <a href="https://brakemanpro.com">Brakeman Pro</a> as you may have guess is the enhanced version of the open source Brakeman with a native desktop application for managing scans and scan results. It's built using JRuby and JavaFX (JRubyFX). Brakeman Pro 1.0 has been released!.</p>
 
   <p>Keywords</p>
   <ul>
