--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ layout: default
   <h3>Twitter</h3>
   <h4>Product Security, AppSec Engineer</h4>
 
-  <p> After a fun interview, Twitter offered my a role on the security team. At the time, there was one team. Over time, my role moved to product security and then to application security.</p>
+  <p> After a fun interview, Twitter offered me a role on the security team. At the time, there was one team. Over time, my role moved to product security and then to application security.</p>
 
   <p> When I joined the company, there was only one Scala endpoint and about 1,200 employees. I helped Twitter's application security program scale to not only the increasing adoption of scala, but also with the increasing number of engineers. Obviously, I did not form the entire program but I did contribute significantly to a program than handled the growth well. At the time I left, only a few Rails endpoints were left and the company had tripled in size. </p>
 
