--- a/stats.html
+++ b/stats.html
@@ -1,7 +1,7 @@
-master has 2921 repos
-gh-pages has 42 repos
-main has 30 repos
-github has 6 repos
-development has 3 repos
-github-build has 2 repos
-primary has 2 repos
+<p> master has 2921 repos </p>
+<p> gh-pages has 42 repos </p>
+<p> main has 30 repos </p>
+<p> github has 6 repos </p>
+<p> development has 3 repos </p>
+<p> github-build has 2 repos </p>
+<p> primary has 2 repos </p>
