--- a/stats.html
+++ b/stats.html
@@ -1,7 +1,8 @@
-<p> master has 2923 repos </p>
+<p> master has 2911 repos </p>
+<p> main has 43 repos </p>
 <p> gh-pages has 42 repos </p>
-<p> main has 31 repos </p>
 <p> github has 6 repos </p>
 <p> development has 3 repos </p>
 <p> github-build has 2 repos </p>
 <p> primary has 2 repos </p>
+<p> vulnerable has 2 repos </p>
