remove twitter, add mastodon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
   <h2> Me on the web </h2>
 
   <ul>
-    <li><a href="https://twitter.com/ndm">https://twitter.com/ndm</a></li>
+    <li><a href="https://infosec.exchange/@oreoshake">https://infosec.exchange/@oreoshake</a></li>
     <li><a href="https://github.com/oreoshake">https://github.com/oreoshake</a></li>
     <li><a href="https://speakerdeck.com/oreoshake">https://speakerdeck.com/oreoshake</a></li>
   </ul>
